--- a/chat_style.html
+++ b/chat_style.html
@@ -1,27 +1,72 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Apply Today, Received Today</title>
   <style>
-    body {margin:0;font-family:"Segoe UI",sans-serif;background:#eef2f6;display:flex;justify-content:center;align-items:center;min-height:100vh;padding:1rem;}
-    .container {background:#fff;border-radius:16px;max-width:480px;width:100%;box-shadow:0 8px 20px rgba(0,0,0,0.1);padding:1.5rem;}
-    h1 {text-align:center;color:#0a2540;margin-bottom:1rem;}
-    .chat {background:#f1f1f1;border-radius:12px;padding:0.8rem 1rem;margin-bottom:0.6rem;max-width:90%;}
-    .agent {background:#e2f7e2;color:#333;}
-    .cta-button {display:block;text-align:center;background:#25D366;color:#fff;text-decoration:none;padding:0.8rem 1.5rem;border-radius:8px;margin-top:1rem;font-weight:bold;}
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background: linear-gradient(135deg, #f7faff, #d9ecff);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem;
+    }
+    .container {
+      background: #ffffff;
+      padding: 2.5rem 2rem;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      width: 100%;
+      text-align: center;
+    }
+    .container h1 {
+      color: #0a2540;
+      font-size: 1.6rem;
+      margin-bottom: 1.5rem;
+    }
+    .container ul {
+      text-align: left;
+      padding-left: 0;
+      list-style: none;
+      margin-bottom: 2rem;
+    }
+    .container li {
+      font-size: 1.05rem;
+      margin: 0.7rem 0;
+      color: #222;
+    }
+    .cta-button {
+      display: inline-block;
+      background: #25D366;
+      color: white;
+      padding: 0.8rem 1.6rem;
+      font-size: 1rem;
+      font-weight: bold;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+    .cta-button:hover {
+      background: #1ebe5d;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>📌 Apply Today, Received Today</h1>
-    <div class="chat agent">👩‍💼 Hello! We are a Singapore Licensed Advisor.</div>
-    <div class="chat">❌ No any hidden fees.</div>
-    <div class="chat">⏱️ Process within 30 minutes.</div>
-    <div class="chat">🟢 Interest 2% only.</div>
-    <a class="cta-button" href="https://api.whatsapp.com/send?phone=6581703143&text=Apply loan from TIKTOK." target="_blank">📲 Start WhatsApp Now</a>
+    <ul>
+      <li>❌ No any hidden fees</li>
+      <li>⏱️ Process within 30 minutes</li>
+      <li>🟢 Interest 2% only</li>
+    </ul>
+    <a class="cta-button" href="https://api.whatsapp.com/send?phone=6581703143&text=Apply loan from TIKTOK." target="_blank">
+      📲 Singapore Licensed Advisor
+    </a>
   </div>
 </body>
 </html>
